# lem_in_g

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  README.md  author  dijkstra.c  main.c  man_err.c  map  map2  map3  map4  mego  mego_2  mmm  mpp  outp  pbcopy  romb.txt  slv  solver.c  superbig_2  superbig_3  test.sh  visu  visu.py  xclip
bfs/: dfs.c  lem_in.h  main.c
binary_heap/: Makefile
binary_heap/includes/: binary_heap.h
binary_heap/srcs/: bin_free.c  bin_get_root.c  bin_inc_key.c  bin_swap.c
fibonacci_heap/includes/: fibonacci_heap.h
fibonacci_heap/srcs/: fib_create_node.c  fib_heap_union.c  fib_init.c  fib_insert_node.c  fib_remove_min.c
includes/: ft_writer.h  lem_in.h
libbinheap/: Makefile
libbinheap/srcs/: bin_insert.c  bin_remove_root.c  binary_init.c
libft/: Makefile  author  ft_atoi.c  ft_atoli.c  ft_bzero.c  ft_del.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strchrcount.c  ft_strclr.c  ft_strcmp.c  (+28 more)
libft/0_checkers/: Makefile
libft/0_checkers/srcs/: ft_isalnum.c  ft_isprint.c
libft/0_mem/: Makefile
libft/0_mem/srcs/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/1_string/: Makefile
libft/1_string/srcs/: ft_strcat.c  ft_strchr.c  ft_strchrcount.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtoupper.c  ft_strtrim.c
libft/1_tonum/: Makefile
libft/1_tonum/srcs/: ft_atoli.c
libft/2_get_next_line/: Makefile
libft/2_get_next_line/srcs/: ft_get_next_line.c  ft_get_next_line2.c
libft/2_lst/: Makefile
libft/2_lst/srcs/: ft_del.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/2_put/: Makefile
libft/2_put/srcs/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/2_strchange/: Makefile
libft/2_strchange/srcs/: ft_itoa.c  ft_tolower.c  ft_toupper.c
libft/3_dstr/: Makefile
libft/3_dstr/srcs/: dstr.c  dstr2.c
libft/includes/: binary_heap.h  dstr.h  ft_checkers.h  ft_dstr.h  ft_lst.h  ft_mem.h  ft_put.h  ft_strchange.h  ft_string.h  ft_tonum.h  get_next_line.h  libft.h
libft/srcs/binary_heap/: bin_free.c  bin_get_root.c  bin_heapify.c  bin_inc_key.c  bin_insert.c  bin_remove_root.c  bin_swap.c  binary_init.c
libft/srcs/checkers/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c
libft/srcs/dstr/: dstr.c  dstr2.c
libft/srcs/get_next_line/: ft_get_next_line.c  ft_get_next_line2.c
libft/srcs/lst/: ft_del.c  (+6 more)
srcs/: deque.c  deque2.c  dijkstra.c  main.c  man_err.c  parse_hash.c  parse_links.c  parse_map.c  parse_room.c  parse_room2.c  parse_utils.c  solver.c  solver_algo_separation.c  solver_algorithm.c  solver_algorithm_cleaning.c  solver_auxiliary_works_algo.c  solver_auxiliary_works_algo_2.c  solver_bellman_ford_end_start.c  solver_bellman_ford_start_end.c  solver_bf_es_find_way.c  solver_bf_find_way.c  solver_bfs.c  solver_dfs.c  solver_dfs2.c  solver_dijkstra.c  solver_ek.c  solver_ek2.c  solver_find_best_current_way.c  solver_find_way.c  solver_initialization.c  solver_sufficienty_c.c  solver_sufficienty_c_common_rooms_calc.c  solver_tools.c  writer_main.c  writer_main2.c  writer_main_new.c  writer_push_ants.c  writer_string.c
(+53 files in other folders)
